--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wdth,wght@75,300;75,700;87.5,200;87.5,400;87.5,700&family=Lora:wght@300;400;700&family=Fira+Code:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Lora:ital,wght@0,400..700;1,400..700&family=Saira+Extra+Condensed:wght@300;800&family=Saira+Semi+Condensed:wght@300;700&display=swap");
 @import "tailwindcss";
 
 :root {
@@ -7,8 +7,8 @@
 }
 
 @theme inline {
-  --font-octa: "Nunito Sans", sans-serif;
-  --font-sans: "Nunito Sans", sans-serif;
+  --font-octa: "Saira Extra Condensed", sans-serif;
+  --font-sans: "Saira Semi Condensed", sans-serif;
   --font-serif: "Lora", serif;
   --font-mono: "Fira Code", monospace;
 
@@ -62,6 +62,7 @@
   --spacing-10: 21rem;
 
   /* aspect ratios */
+  --aspect-double: 2 / 1;
   --aspect-wide: 3 / 1;
   --aspect-image: 3 / 2;
 }
@@ -70,6 +71,13 @@ html {
   color-scheme: dark;
   scroll-behavior: smooth;
   font-size: 18px;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  margin: 0;
+  padding: 0;
 }
 
 .font-octa {
