--- a/src/app.css
+++ b/src/app.css
@@ -57,8 +57,8 @@
   --color-complement-800: hsl(var(--hue-complement), 30%, 94%);
   --color-complement-900: hsl(var(--hue-complement), 30%, 100%);
 
-  --color-main: hsl(var(--hue), 60%, 50%);
-  --color-complement: hsl(var(--hue-complement), 50%, 70%);
+  --color-main: hsl(var(--hue), 100%, 60%);
+  --color-complement: hsl(var(--hue-complement), 100%, 60%);
 
   /* Spacings */
   --spacing-1: 0.1rem;
@@ -97,6 +97,10 @@ body {
 
 .font-sans {
   font-stretch: 87.5%;
+}
+
+.pcsc-bd {
+  @apply backdrop-blur-md backdrop-brightness-110 backdrop-saturate-150 backdrop-contrast-75;
 }
 
 .red {
@@ -165,6 +169,16 @@ body {
 .carmine {
   --hue: 335;
   --hue-complement: 160;
+}
+
+.pcsc {
+  --hue: 320;
+  --hue-complement: 210;
+}
+
+.pcsc-one {
+  --hue: 210;
+  --hue-complement: 320;
 }
 
 .cta {
