feat(pcsc): applied color changes

--- a/src/app.css
+++ b/src/app.css
@@ -234,13 +234,23 @@ body {
 }
 
 .pcsc {
-  --hue: 320;
-  --hue-complement: 210;
+  --h-a: 350;
+  --h-b: 260;
+  --h-c: 100;
+  --h-d: 125;
+  --h-e: 150;
+  --h-f: 175;
+  --h-g: 200;
 }
 
 .pcsc-one {
-  --hue: 210;
-  --hue-complement: 320;
+  --h-a: 260;
+  --h-b: 350;
+  --h-c: 100;
+  --h-d: 125;
+  --h-e: 150;
+  --h-f: 175;
+  --h-g: 200;
 }
 
 .cta {
